--- a/package.json
+++ b/package.json
@@ -4,17 +4,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "next": "latest",
+    "next": "^11.1.2", // Phiên bản tương thích với React 17
     "react": "17.0.2",
     "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
   }
 }
