--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "start-legacy": "NODE_OPTIONS=--openssl-legacy-provider next start"
   },
   "dependencies": {
     "axios": "^1.6.8",
